<resources>
    <string name="app_name">Biletim</string>
    <string name="slogan">"Traveling Jadi Lebih Yahut!"</string>
    <string name="slogan2">"Discover \nThe Beauty \nOf Earth"</string>
    <string name="signin">Sign In</string>
    <string name="newaccount">New Account</string>
    <string name="cont">Continue</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="crt_newaccount">Create New Account</string>
    <string name="crt_newaccount_description">Please fill up the forms below \nfor informations</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="selfie_description">Let the world knows yourself \nmore better and ever</string>
    <string name="name">Name</string>
    <string name="bio">Biography</string>
    <string name="success">Great !</string>
    <string name="success_des">Welcome to the TiketSaya \nand enjoy your trip</string>
    <string name="start">Start Journey</string>
    <string name="mydash">My Dashboard</string>
    <string name="mainmenu">Main Menu</string>
    <string name="mainmenu_des">Explore the beauty of world</string>
    <string name="needidea">Need idea?</string>
    <string name="needidea_des">Look at this recommendation</string>
    <string name="info">Information</string>
    <string name="info_des">Knowing before travel</string>
    <string name="ic_photo_des">Tripod everywhere</string>
    <string name="ic_wifi_des">Connect for any tourist</string>
    <string name="ic_festival_des">Dance and Foods</string>
    <string name="buy">Buy Ticket</string>
    <string name="ticket_det_title">Ticket Details</string>
    <string name="ticket_det_des">Check the amount of tickets</string>
    <string name="ticket_det_addinfo">Children below 3 years old must \nbuy ticket to enter the landmark.</string>
    <string name="ticket_pricing_title">Pricing</string>
    <string name="ticket_balance_left_desc">Your current balance is</string>
    <string name="ticket_balance_left">US$ 329</string>
    <string name="ticket_total_title">Total Price</string>
    <string name="ticket_total">US$ 200</string>
    <string name="btn_pay">Pay Now</string>
    <string name="checkout_success_title">Congrats !</string>
    <string name="checkout_success_des">Your ticket was paid and \nenjoy your trip</string>
    <string name="checkout_view_ticket">View Tickets</string>
    <string name="profile_myticket">My Ticket</string>
    <string name="ticket">Tickets</string>
    <string name="profile_btn_edit">Edit Profile</string>
    <string name="profile_btn_sign_out">Sign Out</string>
    <string name="ticket_det_date">Date</string>
    <string name="ticket_det_time">Time</string>
    <string name="ticket_det_info">Information</string>
    <string name="ticket_btn_refund">Refund Now</string>
    <string name="btn_save_profile">Save Profile</string>
    <string name="edit_profile_des">We highly suggest you \nto use the correct informations</string>

</resources>
